--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    
-        <div class="container-fluid">
+    <nav class="navbar navbar-inverse">
+       
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'home' %}">GALLERY</a>
             </div>
