--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -9,8 +9,8 @@
 
 <body>
     <nav class="navbar navbar-inverse">
-       
-            <div class="navbar-header">
+        <div class="container-fluid">
+            
                 <a class="navbar-brand" href="{% url 'home' %}">GALLERY</a>
             </div>
 
