added navbar gallery

--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            
-                <a class="navbar-brand" href="{% url 'home' %}">GALLERY</a>
+            <div class="navbar-header">
+              
             </div>
 
             <!-- search form for searching categories -->
