--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-              
+                <a class="navbar-brand" href="{% url 'home' %}">GALLERY</a>
             </div>
 
             <!-- search form for searching categories -->
@@ -20,7 +20,7 @@
                 <form class="col-md-6" role="search" action="{% url 'search_category' %}">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="search images category" name="category">
-                        <div class="input-group-btn">
+                       
                             <button class="btn btn-info" type="submit">Search</button>
                         </div>
                     </div>
