added button search

--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -20,8 +20,8 @@
                 <form class="col-md-6" role="search" action="{% url 'search_category' %}">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="search images category" name="category">
-                       
-                            <button class="btn btn-info" type="submit">Search</button>
+                        <div class="input-group-btn">
+                        
                         </div>
                     </div>
         
