added class footer

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -23,11 +23,13 @@
             cursive;
         font-size: 24px;
     }
-    
-    footer{
-        background-color: green;
-        padding:10px;
+    #introduction{
+        margin-top:-20px;
+        padding-top: 20px;
+        background-color:green;
+       
     }
+  
 </style>
 
 <div id="introduction" class='text-center'>
