added class id introduction

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -29,10 +29,13 @@
         background-color:green;
        
     }
-  
+    footer{
+        background-color: green;
+        padding:10px;
+    }
 </style>
 
-<div id="introduction" class='text-center'>
+
 
     <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Felos GALLERY</h1>
     <hr>
