added paragraph welcome

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -35,11 +35,11 @@
     }
 </style>
 
-
+<div id="introduction" class='text-center'>
 
     <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Felos GALLERY</h1>
     <hr>
-    <p>Your favorite online photo GALLERY</p>
+  
     <hr>
 
 </div>
