added class container

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -39,12 +39,12 @@
 
     <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Felos GALLERY</h1>
     <hr>
-  
+    <p>Your favorite online photo GALLERY</p>
     <hr>
 
 </div>
 
-<div class="container">
+
 
     <!-- Images Section -->
 
