added class images

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -44,11 +44,11 @@
 
 </div>
 
-
+<div class="container">
 
     <!-- Images Section -->
 
-    <div class="images">
+    
 
         {% for image in images%}
         <div class="col-lg-4">
