added class model body

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -48,7 +48,7 @@
 
     <!-- Images Section -->
 
-    
+    <div class="images">
 
         {% for image in images%}
         <div class="col-lg-4">
@@ -69,7 +69,7 @@
 
                         </div>
 
-                        <div class="modal-body">
+                        
                             <p class="text-justify">{{image.image_details}}</p>
                             <p class="text-left"><strong style="color: brown;">Location: </strong>
                                 {{image.location}}</p>
