added class image details

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -69,8 +69,8 @@
 
                         </div>
 
-                        
-                            <p class="text-justify">{{image.image_details}}</p>
+                        <div class="modal-body">
+                            
                             <p class="text-left"><strong style="color: brown;">Location: </strong>
                                 {{image.location}}</p>
                             <p class="text-left"><strong style="color: brown;">Category: </strong>
