--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -70,9 +70,8 @@
                         </div>
 
                         <div class="modal-body">
+                            <p class="text-justify">{{image.image_details}}</p>
                             
-                            <p class="text-left"><strong style="color: brown;">Location: </strong>
-                                {{image.location}}</p>
                             <p class="text-left"><strong style="color: brown;">Category: </strong>
                                 {{image.category}}</p>
                         </div>
