added class image category

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -71,9 +71,9 @@
 
                         <div class="modal-body">
                             <p class="text-justify">{{image.image_details}}</p>
-                            
-                            <p class="text-left"><strong style="color: brown;">Category: </strong>
-                                {{image.category}}</p>
+                            <p class="text-left"><strong style="color: brown;">Location: </strong>
+                                {{image.location}}</p>
+                           
                         </div>
                         <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 padding-1">
                             <input id="{{image.id}}-url" class="form-control input-md responsive" type="text"
