--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -73,14 +73,15 @@
                             <p class="text-justify">{{image.image_details}}</p>
                             <p class="text-left"><strong style="color: brown;">Location: </strong>
                                 {{image.location}}</p>
-                           
+                            <p class="text-left"><strong style="color: brown;">Category: </strong>
+                                {{image.category}}</p>
                         </div>
                         <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 padding-1">
                             <input id="{{image.id}}-url" class="form-control input-md responsive" type="text"
                                 value="{{image.image.url}}">
                         </div>
 
-                        <button type="button" onclick="copyToClipboard();">Copy</button>
+                     
 
                         <script>
                             function copyToClipboard() {
