added class medal footer

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -81,7 +81,7 @@
                                 value="{{image.image.url}}">
                         </div>
 
-                     
+                        <button type="button" onclick="copyToClipboard();">Copy</button>
 
                         <script>
                             function copyToClipboard() {
@@ -92,7 +92,7 @@
                                 alert('url copied');
                             }
                         </script>
-                        <div class="modal-footer">
+                        
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
