added class button close

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -92,8 +92,8 @@
                                 alert('url copied');
                             }
                         </script>
-                        
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <div class="modal-footer">
+                         
                         </div>
                     </div>
 
