added class footer

--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -93,7 +93,7 @@
                             }
                         </script>
                         <div class="modal-footer">
-                         
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
                     </div>
 
@@ -107,7 +107,7 @@
 
 </div>
 
-<footer class="footer">
+
     <p class="text-center">© kurgatfelo@2022. All Rights Reserved</p>
 </footer>
 
