--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -83,7 +83,15 @@
 
                         <button type="button" onclick="copyToClipboard();">Copy</button>
 
-                        
+                        <script>
+                            function copyToClipboard() {
+                                var copyText = document.getElementById("{{image.id}}-url");
+                                copyText.select();
+                                copyText.setSelectionRange(0, 99999)
+                                document.execCommand("copy");
+                                alert('url copied');
+                            }
+                        </script>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         </div>
