--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -35,7 +35,7 @@
                 <li class="dropdown">
                     <a class="nav-link dropdown-toggle location navbar-brand" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-decoration: none;">
-                        Search Images Location
+                        Location
                     </a>
                     <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdown">
                         {% for location in location %}
