--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -21,7 +21,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="search images category" name="category">
                         <div class="input-group-btn">
-                            <button class="btn btn-info" type="submit">Search</button>
+                            <button class="btn btn-info" type="submit" style="background-color: hotpink;">Search</button>
                         </div>
                     </div>
         
