--- a/gallery/templates/all-gallery/gallery.html
+++ b/gallery/templates/all-gallery/gallery.html
@@ -39,7 +39,7 @@
 
     <h1 style="font-family: 'Cinzel Decorative', cursive;">Welcome To Felos GALLERY</h1>
     <hr>
-    <p>myGALLERY</p>
+    <marquee behaviour="scroll" direction="up"><p>myGALLERY</p></marquee>
     <hr>
 
 </div>
